--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .ipynb_checkpoints/
 csv_file/
+source/csv_file/
 .DS_Store/
 흡연과 금연의 줄다리기/
+흡연과 금연의 줄다리기
+GanttChart
 .gitignore.DS_Store
+.gitignore
